Fix: Display multiple whitespace characters in message subject & recipient names (#238)

--- a/server/ui-src/assets/styles.scss
+++ b/server/ui-src/assets/styles.scss
@@ -124,6 +124,14 @@
 	}
 }
 
+.text-spaces-nowrap {
+	white-space: pre;
+}
+
+.text-spaces {
+	white-space: pre-wrap;
+}
+
 #nav-plain-text .text-view,
 #nav-source {
 	white-space: pre;
